# yew-webgpu-component

./: .gitignore  Cargo.toml  README.md  index.html
src/: basic.frag  basic.wgsl  main.rs  webgl.rs
