[package]
name = "yew-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']

[dependencies]
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.21.0", features = ["csr"] }
js-sys = "0.3"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'Window',
  'Navigator',
  'GpuCanvasContext',
  'GpuCanvasConfiguration',
  'Gpu',
  'GpuTextureFormat',
  'GpuAdapter',
  'GpuRequestAdapterOptions',
  'GpuPowerPreference',
  'GpuAdapterInfo',
  'GpuDevice',
  'GpuDeviceDescriptor',
  'GpuSupportedFeatures',
  'GpuBuffer', 
  'GpuBufferDescriptor',
  'GpuShaderModule', 
  'GpuShaderModuleDescriptor',
  'GpuVertexState',
  'GpuVertexFormat',
  'GpuVertexAttribute',
  'GpuVertexBufferLayout',
  'GpuVertexStepMode',
  'GpuTextureFormat',
  'GpuColorTargetState',
  'GpuFragmentState',
  'GpuAutoLayoutMode',
  'GpuPrimitiveTopology',
  'GpuPrimitiveState',
  'GpuRenderPipelineDescriptor',
  'GpuRenderPipeline', 
  'GpuTexture',
  'GpuTextureView',
  'GpuRenderPassColorAttachment',
  'GpuLoadOp',
  'GpuStoreOp',
  'GpuColorDict',
  'GpuRenderPassDescriptor',
  'GpuCommandEncoder',
  'GpuCommandBuffer',
  'GpuRenderPassEncoder',
  'GpuQueue',
  'HtmlInputElement',
  'HtmlSelectElement',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlVertexArrayObject',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',  
]
